--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ script:
 - script/cibuild
 sudo: false
 cache: bundler
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 branches:
   only:
   - gh-pages
